[tool.poetry]
name = "debugger"
version = "1.0.0"
description = "The official Binary Ninja debugger plugin."
authors = ["Xusheng <xusheng@vector35.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
